V3168: Aggiornamento per aggiunta area FKS

--- a/Prevu.Synoptics.V3168_Sirplaste/AirView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/AirView.xaml
@@ -13,7 +13,7 @@
              mc:Ignorable="d" 
              d:Height="650" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="650" Width="1700">
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="534-01-MA1" Canvas.Left="626" Canvas.Top="92" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="534-01-MA1" Canvas.Left="626" Canvas.Top="62" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -23,7 +23,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="80" RenderTransformOrigin="0.5,0.5" StatusComponent="534-01-MA1" Canvas.Left="694" Canvas.Top="130" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="534-01-MA1" Canvas.Left="679" Canvas.Top="115" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -33,7 +33,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="236" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Canvas.Left="643" Canvas.Top="340" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="206" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Canvas.Left="658" Canvas.Top="339" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -43,27 +43,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="80" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" Canvas.Left="694" Canvas.Top="235" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="312" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Canvas.Left="618" Canvas.Top="392" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="158" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="668" Canvas.Top="287" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="268" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Canvas.Left="640" Canvas.Top="384" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -83,7 +63,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="189" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" Canvas.Left="732" Canvas.Top="196" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="203" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" Canvas.Left="718" Canvas.Top="196" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -93,7 +73,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="176" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="745" Canvas.Top="210" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="189" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="732" Canvas.Top="210" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -103,7 +83,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Canvas.Left="759" Canvas.Top="224" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="176" RenderTransformOrigin="0.5,0.5" StatusComponent="882-01-MA1" Canvas.Left="745" Canvas.Top="224" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -113,7 +93,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="149" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Canvas.Left="772" Canvas.Top="238" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Canvas.Left="759" Canvas.Top="238" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -123,7 +103,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="295" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Canvas.Left="625" Canvas.Top="182" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="98" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Canvas.Left="624" Canvas.Top="139" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -133,7 +113,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="111" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" Canvas.Left="625" Canvas.Top="273" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="97" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" Canvas.Left="625" Canvas.Top="213" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -143,7 +123,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="124" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="625" Canvas.Top="364" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="111" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="625" Canvas.Top="289" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -153,7 +133,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Canvas.Left="625" Canvas.Top="456" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="124" RenderTransformOrigin="0.5,0.5" StatusComponent="882-01-MA1" Canvas.Left="625" Canvas.Top="366" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -163,7 +143,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="151" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Canvas.Left="625" Canvas.Top="546" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Canvas.Left="625" Canvas.Top="441" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -173,19 +153,123 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1063" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:JumpLabel Canvas.Left="577" Canvas.Top="60" HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="810-01-MA1" JumpToLabel="810-01-MA1"/>
-        <Labels:JumpLabel 
-            JumpToLabel="FKS-71-ECS1" Canvas.Left="577" Canvas.Top="241" JumpFromLabel="FKS-71-ECS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel 
-            JumpToLabel="854-01-MA1" Canvas.Left="577" Canvas.Top="149" HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="854-01-MA1"/>
-        <Labels:JumpLabel 
-            JumpToLabel="888-01-MA1" Canvas.Left="577" Canvas.Top="332" JumpFromLabel="888-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel 
-            JumpToLabel="898-01-MA1" Canvas.Left="577" Canvas.Top="423" JumpFromLabel="898-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel 
-            JumpToLabel="908-01-MA1" Canvas.Left="577" Canvas.Top="514" JumpFromLabel="908-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Canvas.Left="697" Canvas.Top="160" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="202" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Canvas.Left="718" Canvas.Top="182" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="20" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" Canvas.Left="710" Canvas.Top="204" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="693" Canvas.Top="249" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="146" RenderTransformOrigin="0.5,0.5" StatusComponent="882-01-MA1" Canvas.Left="674" Canvas.Top="295" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="332" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="622" Canvas.Top="430" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="163" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Canvas.Left="772" Canvas.Top="252" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="151" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Canvas.Left="625" Canvas.Top="517" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="165" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="625" Canvas.Top="594" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="149" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="786" Canvas.Top="266" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Machines:V01_EC_FiltroManiche Canvas.Left="904" Canvas.Top="149" Height="237" Width="159"/>
+        <Labels:JumpLabel Canvas.Left="577" HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="810-01-MA1" JumpToLabel="810-01-MA1" Canvas.Top="30"/>
+        <Labels:JumpLabel 
+            JumpToLabel="880-01-EC1" Canvas.Left="577" Canvas.Top="181" JumpFromLabel="880-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel 
+            JumpToLabel="854-01-MA1" Canvas.Left="577" Canvas.Top="106" HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="854-01-MA1"/>
+        <Labels:JumpLabel 
+            JumpToLabel="888-01-MA1" Canvas.Left="577" Canvas.Top="257" JumpFromLabel="888-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel 
+            JumpToLabel="890-01-EC1" Canvas.Left="577" Canvas.Top="333" JumpFromLabel="890-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel 
+            JumpToLabel="898-01-MA1" Canvas.Left="577" Canvas.Top="409" JumpFromLabel="898-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel 
+            JumpToLabel="908-01-MA1" Canvas.Left="577" Canvas.Top="485" JumpFromLabel="908-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel 
+            JumpToLabel="920-01-EC1" Canvas.Left="577" Canvas.Top="561" JumpFromLabel="920-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1063" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 
 </UserControl>
