--- a/Prevu.Synoptics.V2150_Planeta/Pages/P608.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P608.xaml
@@ -9,6 +9,7 @@
              x:Class="Prevu.Synoptics.P608" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
+    <Labels:Pipe Color="Water" Width="42" StatusComponent="370-21-CV1" Canvas.Left="1209" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="556-01-MA1" PipeHeight="Medium" Canvas.Left="352" Canvas.Top="405" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -118,7 +119,7 @@
     <Labels:Pipe Width="65" RenderTransformOrigin="0.5,0.5" StatusComponent="600-01-MA1" Canvas.Left="807" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="53" RenderTransformOrigin="0.5,0.5" StatusComponent="601-01-MA1" Canvas.Left="906" Canvas.Top="202" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="54" RenderTransformOrigin="0.5,0.5" StatusComponent="601-01-MA1" Canvas.Left="906" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="252" RenderTransformOrigin="0.5,0.5" StatusComponent="607-01-MA1" PipeHeight="Medium" Canvas.Left="1024" Canvas.Top="326" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="252" RenderTransformOrigin="0.5,0.5" StatusComponent="607-01-MA1" PipeHeight="Medium" Canvas.Left="996" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -128,7 +129,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="152" RenderTransformOrigin="0.5,0.5" StatusComponent="607-01-MA1" PipeHeight="Medium" Canvas.Left="1001" Canvas.Top="447" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="152" RenderTransformOrigin="0.5,0.5" StatusComponent="607-01-MA1" PipeHeight="Medium" Canvas.Left="973" Canvas.Top="447" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="568-01-MA1" Canvas.Left="748" Canvas.Top="149" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -259,7 +260,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="151" RenderTransformOrigin="0.5,0.5" StatusComponent="607-01-MA1" PipeHeight="Medium" Canvas.Left="1146" Canvas.Top="204" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="179" RenderTransformOrigin="0.5,0.5" StatusComponent="607-01-MA1" PipeHeight="Medium" Canvas.Left="1118" Canvas.Top="204" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="139" RenderTransformOrigin="0.5,0.5" StatusComponent="601-01-MA1" Canvas.Left="949" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="36" StatusComponent="601-01-MA1" Canvas.Left="1068" Canvas.Top="478" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
@@ -295,7 +296,7 @@
     <Machines:V01_VS_Airlock Canvas.Left="433" Canvas.Top="680" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VB_VibratingScreen_3Layer Canvas.Left="722" Canvas.Top="173" Height="147" Width="129" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VB_VibratingScreen_3Layer Canvas.Left="926" Canvas.Top="173" Height="147" Width="129" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_MU_Grinder Canvas.Left="1189" Canvas.Top="250" Height="162" Width="202" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_MU_Grinder Canvas.Left="1192" Canvas.Top="255" Height="162" Width="202" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VS_Airlock Canvas.Left="1115" Canvas.Top="655" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="325" Canvas.Top="770" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1007" Canvas.Top="745" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -331,5 +332,16 @@
     <Labels:DeviceLabel ComponentName="600-01-MA1" Canvas.Left="741" Canvas.Top="262" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="601-01-MA1" Canvas.Left="945" Canvas.Top="262" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="608-01-MA1" Canvas.Left="1246" Canvas.Top="261" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="608-21-CV1" Canvas.Left="1146" Canvas.Top="417" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1135" Canvas.Top="332" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Machines:CV_Valve_001.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+          <SkewTransform/>
+          <RotateTransform/>
+          <TranslateTransform X="-0.5" Y="-1.95"/>
+        </TransformGroup>
+      </Machines:CV_Valve_001.RenderTransform>
+    </Machines:CV_Valve_001>
   </Canvas>
 </UserControl>
