--- a/Prevu.Synoptics.V3168_Sirplaste/Pages/P997.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Pages/P997.xaml
@@ -12,7 +12,7 @@
              x:Class="Prevu.Synoptics.P997" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="301" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="334" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="301" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="334" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
         <Labels:Pipe Width="72" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="1259" Canvas.Top="72" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="759" Canvas.Top="490">
             <Labels:Pipe.RenderTransform>
@@ -34,7 +34,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="254" Canvas.Top="429" VisibilityComponent="894-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="254" Canvas.Top="429" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -44,7 +44,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="48" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="285" Canvas.Top="174" VisibilityComponent="892-21-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="48" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="285" Canvas.Top="174" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -54,8 +54,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="147" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="261" Canvas.Top="105" Text="" VisibilityComponent="892-21-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="90" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="997-25-CV1" VisibilitySignal="LS1" Canvas.Left="225" Canvas.Top="613">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="147" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="261" Canvas.Top="105" Text="" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT2"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="90" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="997-25-CV1" VisibilitySignal="MAT1" Canvas.Left="225" Canvas.Top="613">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -65,7 +65,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="92" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="997-25-CV1" VisibilitySignal="LS2" Canvas.Left="360" Canvas.Top="618">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="92" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" VisibilityComponent="997-25-CV1" VisibilitySignal="MAT2" Canvas.Left="360" Canvas.Top="618">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -136,8 +136,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="118" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="81" Canvas.Top="105" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="33" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="281" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="892-21-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="48" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="489" Canvas.Top="174" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Width="33" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="281" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1"/>
+        <Labels:Pipe Width="48" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="489" Canvas.Top="174" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -147,8 +147,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="33" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="485" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="258" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="502" Canvas.Top="230" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="33" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="485" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1"/>
+        <Labels:Pipe Width="258" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="502" Canvas.Top="230" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -158,7 +158,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="147" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="488" Canvas.Top="105" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="147" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="488" Canvas.Top="105" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
         <Machines:V01_EC_FiltroManiche Canvas.Left="1318" Canvas.Top="55" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_BBF_DoubleBag Canvas.Left="196" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:V01_BBF_DoubleBag Canvas.Left="641" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
